--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Parket</title>
 </head>
@@ -146,7 +147,14 @@
         <!-- Third Part -->
         <div class="third-part py-3">
             <div class="container">
-                <div class="header-third"></div>
+                <div class="header-third">
+                    <div class="sales pb-4">
+                        <div class="d-flex justify-content-center">
+                            <div class="px-4 py-2 sale-component sale-component-active">Sale 30%</div>
+                            <div class="px-4 py-2 sale-component">Sale 30%</div>
+                        </div>
+                    </div>
+                </div>
                 <div class="third-cards">
                     <div class="row">
                         <div class="col-12 col-md-3 pb-2 third-card">
@@ -235,7 +243,7 @@
             </div>
         </div>
         <!-- Fifth Part -->
-        <div class="fifth-part py-3">
+        <!-- <div class="fifth-part py-3">
             <div class="container">
                 <h3>Lorem, ipsum.</h3>
                 <div class="row">
@@ -273,7 +281,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Sixth Part -->
         <div class="sixth-part py-3">
             <div class="container">
@@ -305,7 +313,7 @@
             </div>
         </div>
         <!-- Seventh Part -->
-        <div class="seventh-part py-3">
+        <!-- <div class="seventh-part py-3">
             <div class="container">
                 <h3>Lorem</h3>
                 <div class="sales">
@@ -363,7 +371,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <!-- Contact -->
