--- a/catalog.html
+++ b/catalog.html
@@ -16,64 +16,96 @@
 </head>
 <body>
 <!-- Header -->
-    <header>
-        <div class="header-background py-4">
-            <div class="container-md d-none d-md-block">
-                <div class="row">
-                    <div class="col-4">
-                        <ul class="d-flex first-header-ul header-ul">
-                            <li class="pe-3"><a href="./catalog.html">Kataloq</a></li>
-                            <li><a href="#">Kompaniya</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-4 text-center">
-                        <div class="header-info"><a href="./index.html">
+<header>
+    <div class="header-background py-4">
+        <div class="container-md d-none d-md-block">
+            <div class="row">
+                <div class="col-4">
+                    <ul class="d-flex first-header-ul header-ul" id="primary-ul-nav">
+                        <li class="pe-3" id="catalog-nav"><a href="#">Kataloq <i class="fa-solid fa-chevron-down"></i></a>
+                            <!-- Catalog Categories -->
+                            <ul class="d-none d-md-block" id="catalog-categories">
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                                <li><a href="#">Salam</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Kompaniya</a></li>
+                    </ul>
+                </div>
+                <div class="col-4 text-center">
+                    <div class="header-info">
+                        <a href="./index.html">
                             <img src="./assets/img/1638014045182.png" alt="Logo">
-                        </a></div>
-                    </div>
-                    <div class="col-4">
-                        <ul class="d-flex second-header-ul header-ul text-end justify-content-end">
-                            <li class="pe-3"><a href="#">Haqqimizda</a></li>
-                            <li><a href="#">Magaza</a></li>
-                        </ul>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <!-- Mobile Navbar -->
-            <div class="d-md-none d-block">
-                <div class="row">
-                    <div class="col-3">
-                        <nav class="navbar navbar-dark ">
-                            <div class="container-fluid">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarToggleExternalContent"
-                                    aria-controls="navbarToggleExternalContent" aria-expanded="false"
-                                    aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="col-9">
-                        <div class="mobile-logo">
-                            Parket
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="collapse" id="navbarToggleExternalContent">
-                <div class="p-4">
-                    <h5 class="text-white h4">Collapsed content</h5>
-                    <span class="text-muted">Toggleable via the navbar brand.</span>
+                <div class="col-4">
+                    <ul class="d-flex second-header-ul header-ul text-end justify-content-end">
+                        <li class="pe-3"><a href="#">Haqqimizda</a></li>
+                        <li><a href="#">Magaza</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </header>
+        <!-- Mobile Navbar -->
+        <div class="d-md-none d-block">
+            <div class="row">
+                <div class="col-3">
+                    <nav class="navbar navbar-dark ">
+                        <div class="container-fluid">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarToggleExternalContent"
+                                aria-controls="navbarToggleExternalContent" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                        </div>
+                    </nav>
+                </div>
+                <div class="col-9">
+                    <div class="mobile-logo ps-5">
+                        <img src="./assets/img/1638014045182.png" alt="Logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="p-4">
+                <h5 class="text-white h4">Collapsed content</h5>
+                <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+        </div>
+    </div>
+</header>
 
     <main>
         <div class="container">
+            <!-- Nav Catalogs -->
+            <div class="catalogs-nav">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="./catalog.html">Salam <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="./catalog.html">Salam</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="./catalog.html">Salam</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+            </div>
+            <!-- Catalogs -->
             <div class="catalogs">
                 <div class="row">
                     <div class="col-12 col-md-3 my-2">
@@ -362,5 +394,18 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
