--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
             <div class="container-md d-none d-md-block">
                 <div class="row">
                     <div class="col-4">
-                        <ul class="d-flex first-header-ul header-ul">
-                            <li class="pe-3"><a href="catalog.html">Kataloq</a></li>
+                        <ul class="d-flex first-header-ul header-ul" id="primary-ul-nav">
+                            <li class="pe-3" id="catalog-nav"><a href="./catalog.html">Kataloq <i class="fa-solid fa-chevron-down"></i></a>
+                                <!-- Catalog Categories -->
+                                <ul class="d-none d-md-block" id="catalog-categories">
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                    <li><a href="./catalog.html">Salam</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#">Kompaniya</a></li>
                         </ul>
                     </div>
